# RAT_non_Themis

./: CMakeLists.txt  README.md  clients.json
client_agent/: CMakeLists.txt  connection_config.json
client_agent/include/: Agent.hpp  LockfileManager.hpp  MessageHandler.hpp  TCPClient.hpp
client_agent/src/: Agent.cpp  LockfileManager.cpp  MessageHandler.cpp  TCPClient.cpp  main.cpp
include/: Client.hpp  LockfileManager.hpp  MessageHandler.hpp  RemoteController.hpp  RulesManager.hpp  SCPManager.hpp  SSHManager.hpp  ShellManager.hpp  TCPHandler.hpp
rules/: test.json  test1.json
src/: Client.cpp  LockfileManager.cpp  MessageHandler.cpp  RemoteController.cpp  RulesManager.cpp  SCPManager.cpp  SSHManager.cpp  ShellManager.cpp  TCPHandler.cpp  main.cpp
